30-cert-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/part-of: cert-manager
    certmanager.k8s.io/disable-validation: 'true'
