20-default-backend.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: default
  labels:
    app.kubernetes.io/name: default-backend
    app.kubernetes.io/part-of: ingress-nginx
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: default-backend
      app.kubernetes.io/part-of: ingress-nginx
  template:
    metadata:
      labels:
        app.kubernetes.io/name: default-backend
        app.kubernetes.io/part-of: ingress-nginx
    spec:
      containers:
      - name: default-backend
        image: nuvo/default-backend:0.1.0
        ports:
        - name: http
          containerPort: 9090
        resources:
          limits:
            cpu: 100m
            memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: default-backend
  namespace: default
  labels:
    app.kubernetes.io/name: default-backend
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: default-backend
    app.kubernetes.io/part-of: ingress-nginx
