24-monitor-alertmanager.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitor
  labels:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: monitor
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 9093
    protocol: TCP
    targetPort: web
  selector:
    alertmanager: rfgames
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: default
  labels:
    app.kubernetes.io/name: alertmanager
    app.kubernetes.io/part-of: monitor
spec:
  type: ExternalName
  externalName: alertmanager.monitor.svc.cluster.local
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alertmanager
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-secret: default/ca
    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'on'
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: apis.rfgames.tw
    http:
      paths:
      - backend:
          serviceName: alertmanager
          servicePort: 9093
        path: /v1/alertmanager(/|$)(.*)
  tls:
  - hosts:
    - apis.rfgames.tw
    secretName: tls-tw-rfgames-apis
