91-v1-root-redirect.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: v0-root-redirect
  namespace: default
  labels:
    app.kubernetes.io/name: v0-root-redirect
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: v0-root-redirect
  namespace: default
  labels:
    app.kubernetes.io/name: v0-root-redirect
  annotations:
    nginx.ingress.kubernetes.io/temporal-redirect: https://dps.rfgames.tw
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: v0-root-redirect
          servicePort: http
