32-cert-manager.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-cainjector
  namespace: cert-manager
  labels:
    app.kubernetes.io/name: cainjector
    app.kubernetes.io/part-of: cert-manager
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cainjector
      app.kubernetes.io/part-of: cert-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cainjector
        app.kubernetes.io/part-of: cert-manager
    spec:
      serviceAccountName: cert-manager-cainjector
      containers:
      - name: cainjector
        image: quay.io/jetstack/cert-manager-cainjector:v0.9.1
        args:
        - --v=2
        - --leader-election-namespace=$(POD_NAMESPACE)
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
  labels:
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: cert-manager
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: webhook
      app.kubernetes.io/part-of: cert-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: webhook
        app.kubernetes.io/part-of: cert-manager
    spec:
      serviceAccountName: cert-manager-webhook
      containers:
      - name: webhook
        image: quay.io/jetstack/cert-manager-webhook:v0.9.1
        args:
        - --v=2
        - --secure-port=6443
        - --tls-cert-file=/certs/tls.crt
        - --tls-private-key-file=/certs/tls.key
        resources: {}
        volumeMounts:
        - name: certs
          mountPath: /certs
      volumes:
      - name: certs
        secret:
          secretName: cert-manager-webhook-webhook-tls
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-manager
  namespace: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/part-of: cert-manager
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: cert-manager
      app.kubernetes.io/part-of: cert-manager
  template:
    metadata:
      labels:
        app.kubernetes.io/name: cert-manager
        app.kubernetes.io/part-of: cert-manager
      annotations:
        prometheus.io/path: '/metrics'
        prometheus.io/scrape: 'true'
        prometheus.io/port: '9402'
    spec:
      serviceAccountName: cert-manager
      containers:
      - name: cert-manager
        image: quay.io/jetstack/cert-manager-controller:v0.9.1
        imagePullPolicy: IfNotPresent
        args:
        - --v=2
        - --cluster-resource-namespace=$(POD_NAMESPACE)
        - --leader-election-namespace=$(POD_NAMESPACE)
        ports:
        - containerPort: 9402
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-webhook
  namespace: cert-manager
  labels:
    app.kubernetes.io/name: cert-manager
    app.kubernetes.io/part-of: cert-manager
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: 6443
  selector:
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: cert-manager
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: cert-manager-webhook
  labels:
    app.kubernetes.io/name: webhook
    app.kubernetes.io/part-of: cert-manager
  annotations:
    certmanager.k8s.io/inject-apiserver-ca: 'true'
webhooks:
- name: certificates.admission.certmanager.k8s.io
  namespaceSelector:
    matchExpressions:
    - key: certmanager.k8s.io/disable-validation
      operator: NotIn
      values:
      - 'true'
    - key: name
      operator: NotIn
      values:
      - cert-manager
  rules:
  - apiGroups:
    - certmanager.k8s.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - certificates
  failurePolicy: Fail
  clientConfig:
    service:
      name: kubernetes
      namespace: default
      path: /apis/admission.certmanager.k8s.io/v1beta1/certificates
- name: issuers.admission.certmanager.k8s.io
  namespaceSelector:
    matchExpressions:
    - key: certmanager.k8s.io/disable-validation
      operator: NotIn
      values:
      - 'true'
    - key: name
      operator: NotIn
      values:
      - cert-manager
  rules:
  - apiGroups:
    - certmanager.k8s.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - issuers
  failurePolicy: Fail
  clientConfig:
    service:
      name: kubernetes
      namespace: default
      path: /apis/admission.certmanager.k8s.io/v1beta1/issuers
- name: clusterissuers.admission.certmanager.k8s.io
  namespaceSelector:
    matchExpressions:
    - key: certmanager.k8s.io/disable-validation
      operator: NotIn
      values:
      - 'true'
    - key: name
      operator: NotIn
      values:
      - cert-manager
  rules:
  - apiGroups:
    - certmanager.k8s.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterissuers
  failurePolicy: Fail
  clientConfig:
    service:
      name: kubernetes
      namespace: default
      path: /apis/admission.certmanager.k8s.io/v1beta1/clusterissuers
